wp-content/themes/academyAfrica/assets/css/src/widgets/learndash_course_grid.scss
@use '../abstracts/' as *;


.learndash-course-grid {
    .grid {
        display: flex;
        justify-content: space-between;
        align-items: center;
        gap: 80px;

        .item {
            width: 280px;
            max-width: 280px;
            border: 0.5px solid $color-neutral-200;
            background-color: $color-shades-white;
            align-self: stretch;

            article {
                height: 100%;
                display: flex;
                flex-direction: column;

                .thumbnail {
                    .ribbon {
                        display: none;
                    }

                    .image {
                        background-image: url("/wp-content/themes/academyAfrica/assets/images/CourseCardPattern.svg");
                        height: 141px;
                        display: flex;
                        align-items: center;
                        justify-content: center;

                        a {
                            img {
                                width: 90px;
                                height: 90px;
                                border-radius: 50%;
                            }
                        }

                    }
                }

                .content {
                    padding: 20px;
                    display: flex;
                    flex-direction: column;
                    height: 100%;
                    justify-content: space-between;
                    background: $color-shades-white;

                    .top-meta {
                        .entry-title {

                            a {
                                color: $color-primary-700;
                                font-size: 18px;
                                font-weight: 800;
                                line-height: 24px;
                            }
                        }

                        .author {
                            margin-top: 40px;
                            color: $color-secondary-500;
                            text-transform: uppercase;
                            font-size: 14px;
                            font-weight: 600;
                            line-height: 18px;
                        }

                        .categories {
                            display: none;
                        }

                    }

                    .separator {
                        display: none;
                    }

                    .bottom-meta {
                        display: flex;
                        justify-content: space-between;
                        align-items: center;

                        .total-lessons,
                        .total-quizzes {
                            display: none;
                        }

                        .total-students {
                            display: flex;
                            align-items: center;
                            gap: 10px;

                            .icon {
                                display: flex;
                                align-self: center;
                                justify-content: center;

                                &::before {
                                    // outlined user icon
                                    content: "\f007";
                                    font-family: "Font Awesome 5 Free";
                                    font-weight: 900;
                                    font-size: 16px;
                                    color: $color-shades-black;
                                }
                            }

                            .wrapper {
                                .label {
                                    display: none;
                                }

                                .value {
                                    color: $color-shades-black;
                                    font-size: 14px;
                                    font-weight: 400;
                                    line-height: 18px;
                                }
                            }
                        }

                        .price-tag {
                            background: $color-success-500;
                            color: $color-shades-white;
                            height: 25px;
                            text-transform: uppercase;
                            font-size: 14px;
                            font-weight: 700;
                            line-height: 18px;
                            display: flex;
                            align-items: center;
                            justify-content: center;
                            padding: 4px 10px;
                            min-width: 54px;
                        }
                    }
                }
            }

        }
    }

    @include media-breakpoint-down(tablet) {
        .grid {
            flex-direction: column;
            gap: 20px;

            .item {
                width: 100%;
                max-width: 100%;
            }
        }
    }

    @include media-breakpoint-down(desktop) {
        .grid {
            gap: 20px;

            .item {
                width: 100%;
                max-width: 100%;
            }
        }
    }
}

